specs/016-generics/examples/invalid/inference-conflict.ts
function same<T>(a: T, b: T): T {
  return a;
}

console.log(same(1, "x"));
